# CodeHunt-CPP

./: CMakeLists.txt  LICENSE.md  README.md  codehunt.cpp  codeloader.hpp  constants.h  generic_level.hpp  level.hpp
levels/: .directory  default_arithmetic_1.source  default_binary_int_1.source  default_string_1.source  levels.cpp  levels.hpp
